# appimagetool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md
.github/workflows/: build.yml
ci/: build-in-docker.sh  build.sh  install-static-desktop-file-validate.sh  install-static-mksquashfs.sh  install-static-zsyncmake.sh  prepare-loong64.sh
resources/: AppRun.sh
scripts/chroot/: build.sh  chroot_build.sh
src/: CMakeLists.txt  appimagetool.c  appimagetool.cpp  appimagetool_fetch_runtime.c  appimagetool_fetch_runtime.cpp  appimagetool_fetch_runtime.h  appimagetool_sign.c  appimagetool_sign.h  digest.c  elf.c  elf.h  light_byteswap.h  md5.h  util.h
